readme and requeriments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-plotly
-numpy
-matplotlib
-gunicorn
+streamlit==0.71.0
+plotly==4.12.0
+pandas==1.1.4
+matplotlib==3.3.3
+gunicorn==20.0.4
+requests==2.25.0
